Use websocket to broadcast and serialize data from broadcast
